<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/user"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"
        />


    <Button
        android:id="@+id/gotoSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToAdoptions"
        android:text="@string/signn"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/gotoSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToSignUp"
        android:text="@string/signu"
        android:layout_gravity="center"

        />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>