<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signup_view">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fullname"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/pword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/goToSecondActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToAdoptions"
        android:text="@string/signu"
        android:layout_gravity="center"
        />
    </LinearLayout>
</ScrollView>
